--- a/trunk/sgo/web/WEB-INF/_repositorio/sgo/checklist.jrxml
+++ b/trunk/sgo/web/WEB-INF/_repositorio/sgo/checklist.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="checklist" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="240"/>
 	<parameter name="formulario.id" class="java.math.BigDecimal"/>
 	<queryString>
 		<![CDATA[select
@@ -287,269 +287,269 @@ and formulario.id = $P{formulario.id}]]>
 				<text><![CDATA[CARTÃO QUEBRADO]]></text>
 			</staticText>
 			<line>
-				<reportElement x="58" y="190" width="110" height="1"/>
+				<reportElement x="74" y="492" width="88" height="1"/>
 			</line>
 			<staticText>
-				<reportElement x="5" y="175" width="52" height="14"/>
+				<reportElement x="4" y="479" width="61" height="14"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Conferido por:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="201" y="175" width="122" height="14"/>
+				<reportElement x="174" y="479" width="116" height="14"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Documento(s) pendente(s):]]></text>
 			</staticText>
 			<line>
-				<reportElement x="331" y="190" width="110" height="1"/>
+				<reportElement x="297" y="492" width="244" height="1"/>
 			</line>
 			<rectangle>
-				<reportElement x="5" y="198" width="539" height="16"/>
+				<reportElement x="5" y="180" width="539" height="16"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="163" y="201" width="230" height="15"/>
+				<reportElement x="163" y="183" width="230" height="15"/>
 				<textElement>
 					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[INFORMAÇÕES PARA COLHER A ASSINATURA:]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="5" y="234" width="69" height="16"/>
+				<reportElement x="5" y="216" width="69" height="16"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="5" y="223" width="57" height="21"/>
+				<reportElement x="5" y="205" width="57" height="21"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Data:]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="84" y="234" width="383" height="16"/>
+				<reportElement x="84" y="216" width="383" height="16"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="84" y="223" width="57" height="21"/>
+				<reportElement x="84" y="205" width="57" height="21"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Endereço:]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="475" y="234" width="69" height="16"/>
+				<reportElement x="475" y="216" width="69" height="16"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="475" y="223" width="57" height="21"/>
+				<reportElement x="475" y="205" width="57" height="21"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Número:]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="5" y="262" width="69" height="16"/>
+				<reportElement x="5" y="244" width="69" height="16"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="5" y="251" width="57" height="21"/>
+				<reportElement x="5" y="233" width="57" height="21"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[CEP:]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="84" y="262" width="171" height="16"/>
+				<reportElement x="84" y="244" width="171" height="16"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="84" y="251" width="57" height="21"/>
+				<reportElement x="84" y="233" width="57" height="21"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Bairro:]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="273" y="262" width="194" height="16"/>
+				<reportElement x="273" y="244" width="194" height="16"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="273" y="251" width="57" height="21"/>
+				<reportElement x="273" y="233" width="57" height="21"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Cidade:]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="475" y="262" width="69" height="16"/>
+				<reportElement x="475" y="244" width="69" height="16"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="475" y="251" width="57" height="21"/>
+				<reportElement x="475" y="233" width="57" height="21"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Horário:]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="5" y="343" width="539" height="54"/>
+				<reportElement x="5" y="325" width="539" height="54"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="6" y="344" width="94" height="14"/>
+				<reportElement x="6" y="326" width="94" height="14"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Observações:]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="7" y="407" width="539" height="19"/>
+				<reportElement x="7" y="395" width="539" height="19"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="163" y="412" width="199" height="19"/>
+				<reportElement x="163" y="400" width="199" height="19"/>
 				<textElement>
 					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[PARA USO DO REPRESENTANTE:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="8" y="431" width="68" height="14"/>
+				<reportElement x="8" y="419" width="68" height="14"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Horário Chegada:]]></text>
 			</staticText>
 			<line>
-				<reportElement x="74" y="446" width="110" height="1"/>
+				<reportElement x="74" y="434" width="110" height="1"/>
 			</line>
 			<staticText>
-				<reportElement x="176" y="431" width="68" height="14"/>
+				<reportElement x="176" y="419" width="68" height="14"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Horário Saída:]]></text>
 			</staticText>
 			<line>
-				<reportElement x="242" y="446" width="110" height="1"/>
+				<reportElement x="242" y="434" width="110" height="1"/>
 			</line>
 			<line>
-				<reportElement x="431" y="444" width="110" height="1"/>
+				<reportElement x="431" y="432" width="110" height="1"/>
 			</line>
 			<staticText>
-				<reportElement x="365" y="429" width="68" height="14"/>
+				<reportElement x="365" y="417" width="68" height="14"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Espera:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="8" y="455" width="47" height="13"/>
+				<reportElement x="8" y="443" width="47" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Executado:]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="56" y="455" width="14" height="13"/>
+				<reportElement x="56" y="443" width="14" height="13"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="73" y="455" width="19" height="13"/>
+				<reportElement x="73" y="443" width="19" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Sim]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="109" y="455" width="19" height="13"/>
+				<reportElement x="109" y="443" width="19" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Não]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="92" y="455" width="14" height="13"/>
+				<reportElement x="92" y="443" width="14" height="13"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="73" y="473" width="19" height="13"/>
+				<reportElement x="73" y="461" width="19" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Sim]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="8" y="473" width="47" height="13"/>
+				<reportElement x="8" y="461" width="47" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Assinado:]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="56" y="473" width="14" height="13"/>
+				<reportElement x="56" y="461" width="14" height="13"/>
 			</rectangle>
 			<rectangle>
-				<reportElement x="92" y="473" width="14" height="13"/>
+				<reportElement x="92" y="461" width="14" height="13"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="109" y="473" width="19" height="13"/>
+				<reportElement x="109" y="461" width="19" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Não]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="318" y="455" width="19" height="13"/>
+				<reportElement x="318" y="443" width="19" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Sim]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="180" y="455" width="117" height="13"/>
+				<reportElement x="180" y="443" width="117" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Documentação completa:]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="301" y="455" width="14" height="13"/>
+				<reportElement x="301" y="443" width="14" height="13"/>
 			</rectangle>
 			<rectangle>
-				<reportElement x="337" y="455" width="14" height="13"/>
+				<reportElement x="337" y="443" width="14" height="13"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="354" y="455" width="19" height="13"/>
+				<reportElement x="354" y="443" width="19" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Não]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="354" y="473" width="19" height="13"/>
+				<reportElement x="354" y="461" width="19" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Não]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="301" y="473" width="14" height="13"/>
+				<reportElement x="301" y="461" width="14" height="13"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="180" y="473" width="117" height="13"/>
+				<reportElement x="180" y="461" width="117" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Assinatura confere:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="318" y="473" width="19" height="13"/>
+				<reportElement x="318" y="461" width="19" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Sim]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="337" y="473" width="14" height="13"/>
+				<reportElement x="337" y="461" width="14" height="13"/>
 			</rectangle>
 			<staticText>
 				<reportElement x="23" y="503" width="145" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
-				<text><![CDATA[CONTRATO SEM X]]></text>
+				<text><![CDATA[ERRO LOGÍSTICO]]></text>
 			</staticText>
 			<rectangle>
 				<reportElement x="6" y="503" width="14" height="13"/>
@@ -568,31 +568,31 @@ and formulario.id = $P{formulario.id}]]>
 				<reportElement x="6" y="536" width="14" height="13"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="23" y="536" width="145" height="13"/>
+				<reportElement x="23" y="536" width="339" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
-				<text><![CDATA[CLIENTE COM DÚVIDAS]]></text>
+				<text><![CDATA[ASSINATURA DIVERGENTE OU COM DIFICULDADE]]></text>
 			</staticText>
 			<rectangle>
 				<reportElement x="6" y="552" width="14" height="13"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="23" y="552" width="145" height="13"/>
+				<reportElement x="23" y="552" width="370" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
-				<text><![CDATA[ENDEREÇO SEM REFERÊNCIA]]></text>
+				<text><![CDATA[ENDEREÇO INCORRETO / NÚMERO DA CASA NÃO ENCONTRADO]]></text>
 			</staticText>
 			<rectangle>
 				<reportElement x="6" y="568" width="14" height="13"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="23" y="568" width="248" height="13"/>
+				<reportElement x="23" y="568" width="342" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
-				<text><![CDATA[CONTRATO TOTALMENTE EM BRANCO]]></text>
+				<text><![CDATA[CLIENTE NÃO DEIXOU O REPRESENTANTE TIRAR FOTO]]></text>
 			</staticText>
 			<rectangle>
 				<reportElement x="6" y="584" width="14" height="13"/>
@@ -602,7 +602,7 @@ and formulario.id = $P{formulario.id}]]>
 				<textElement>
 					<font size="9"/>
 				</textElement>
-				<text><![CDATA[CLIENTE SEM XEROX DOS DOCUMENTOS]]></text>
+				<text><![CDATA[CLIENTE COM DOCUMENTAÇÃO INCOMPLETA]]></text>
 			</staticText>
 			<rectangle>
 				<reportElement x="6" y="600" width="14" height="13"/>
@@ -612,14 +612,14 @@ and formulario.id = $P{formulario.id}]]>
 				<textElement>
 					<font size="9"/>
 				</textElement>
-				<text><![CDATA[REPRESENTANTE TIROU XEROX DOS DOCUMENTOS]]></text>
+				<text><![CDATA[DOCUMENTO(S) FOTOGRAFADO(S)]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="23" y="615" width="339" height="13"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
-				<text><![CDATA[HORÁRIO MARCADO COM O CLIENTE SEM NECESSSIDADE]]></text>
+				<text><![CDATA[AGENDAMENTO CANCELADO]]></text>
 			</staticText>
 			<rectangle>
 				<reportElement x="6" y="615" width="14" height="13"/>
@@ -632,7 +632,7 @@ and formulario.id = $P{formulario.id}]]>
 				<textElement>
 					<font size="9"/>
 				</textElement>
-				<text><![CDATA[CLIENTE SEM CONHECIMENTO SOBRE A VISITA DO MOTOBOY PARA ASSINATURA]]></text>
+				<text><![CDATA[CLIENTE SEM CONHECIMENTO SOBRE A VISITA DO REPRESENTANTE]]></text>
 			</staticText>
 			<rectangle>
 				<reportElement x="6" y="646" width="14" height="13"/>
@@ -669,7 +669,7 @@ and formulario.id = $P{formulario.id}]]>
 				<textElement>
 					<font size="9"/>
 				</textElement>
-				<text><![CDATA[EM CONTATO OU OPERADOR, CLIENTE DESISTIU DE ASSINAR CONTRATO (INFORMAR MOTIVO NA OBS.)]]></text>
+				<text><![CDATA[EM CONTATO COM CONSULTOR, CLIENTE DESISTIU DE ASSINAR CONTRATO.]]></text>
 			</staticText>
 			<rectangle>
 				<reportElement x="6" y="691" width="14" height="13"/>
@@ -685,47 +685,47 @@ and formulario.id = $P{formulario.id}]]>
 				<text><![CDATA[Observações:]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="5" y="284" width="539" height="54"/>
+				<reportElement x="5" y="266" width="539" height="54"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="6" y="285" width="94" height="16"/>
+				<reportElement x="6" y="267" width="94" height="16"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Ponto de Referência:]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement x="477" y="264" width="115" height="20"/>
+				<reportElement x="477" y="246" width="115" height="20"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{periodoAssinatura}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="477" y="235" width="101" height="20"/>
+				<reportElement x="477" y="217" width="101" height="20"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{clienteNumero}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="88" y="235" width="379" height="20"/>
+				<reportElement x="88" y="217" width="379" height="20"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{clienteEndereco}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
-				<reportElement x="7" y="235" width="100" height="20"/>
+				<reportElement x="7" y="217" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{dataAssinatura}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="7" y="264" width="100" height="20"/>
+				<reportElement x="7" y="246" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{clienteCep}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="88" y="264" width="174" height="20"/>
+				<reportElement x="88" y="246" width="174" height="20"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{clienteBairro}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="275" y="264" width="192" height="20"/>
+				<reportElement x="275" y="246" width="192" height="20"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{clienteCidade}]]></textFieldExpression>
 			</textField>
