--- a/sgo/web/header.jspf
+++ b/sgo/web/header.jspf
@@ -25,8 +25,9 @@
 		<link rel="stylesheet" href="<c:url value="/css/bootstrap.css"/>" />
 		<link rel="stylesheet" href="<c:url value="/css/bootstrap-responsive.css"/>" />
         <link rel="stylesheet" href="<c:url value="/css/datepicker.css"/>" />
-        <link rel="stylesheet" href="<c:url value="/css/select2.css"/>" />
         <link rel="stylesheet" href="<c:url value="/css/TableTools.css"/>" />
+        <link rel="stylesheet" href="<c:url value="/css/select2.css"/>" />
+        <link rel="stylesheet" href="<c:url value="/css/jquery.timepicker.css"/>" />
 
 		<link rel="stylesheet" href="<c:url value="/css/uniform.css"/>" />
 		<link rel="stylesheet" href="<c:url value="/css/fullcalendar.css"/>" />		
@@ -48,6 +49,9 @@
 		<script type="text/javascript" src="<c:url value="/js/jquery.maskedinput-1.2.2.min.js"/>"></script>
 		<script type="text/javascript" src="<c:url value="/js/jquery.maskMoney.0.2.js"/>"></script>
 		<script type="text/javascript" src="<c:url value="/js/jquery.cpf-validate.1.0.min.js"/>"></script>
+		<script type="text/javascript" src="<c:url value="/js/jquery.timepicker.js"/>"></script>
+		<script type="text/javascript" src="<c:url value="/js/Datepair.js"/>"></script>
+		<script type="text/javascript" src="<c:url value="/js/jquery.datepair.js"/>"></script>
 		
 		<script type="text/javascript" src="<c:url value="/js/unicorn.js"/>"></script>
 		<script type="text/javascript" src="<c:url value="/js/funcs.js"/>"></script>
